tests/files/type_checker_tests/should_fail/122.cmdr
//Should fail if left hand side of set is something not an lvalue
3 + 2 -= 3;
